objects/ProductGroupLicenseAssociation__c.object
<CustomObject>
    <description>SFDC1-7972 This object links the Product Group to the related external system licenses [e.g. UserXS]</description>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-4386 Product Family related to this product License</description>
        <inlineHelpText>Link the related Product Family to this Product License</inlineHelpText>
        <label>Product Family</label>
        <referenceTo>Family__c</referenceTo>
        <relationshipLabel>Product Group License Associations</relationshipLabel>
        <relationshipName>ProductGroupLicenseAssociations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <description>SFDC1-4386 Product Group related to this product License</description>
        <inlineHelpText>Link the related Product Group to this Product License</inlineHelpText>
        <label>Product Group</label>
        <referenceTo>ProductGroup__c</referenceTo>
        <relationshipLabel>Product Group License Associations</relationshipLabel>
        <relationshipName>ProductGroupLicenseAssociations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ProductLicense__c</fullName>
        <description>SFDC1-4386 Product License related to this Product Group</description>
        <inlineHelpText>Link the related Product License to this Product Group</inlineHelpText>
        <label>Product License</label>
        <referenceTo>ProductLicense__c</referenceTo>
        <relationshipLabel>Product Group License Associations</relationshipLabel>
        <relationshipName>ProductGroupLicenseAssociations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-4386 Product related to this product License</description>
        <inlineHelpText>Link the related Product to this Product License</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Group License Associations</relationshipLabel>
        <relationshipName>ProductGroupLicenseAssociations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Group License Association</label>
    <nameField>
        <displayFormat>PGLicense-{000000}</displayFormat>
        <label>Product Group License Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Group License Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>